[package]
name = "cpi_whirlpool_anchor_gen_v0250"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_whirlpool_anchor_gen_v0250"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
bytemuck = "*"
anchor-lang = { version = "0.25.0", features = ["init-if-needed"]}
anchor-spl = "0.25.0"
clockwork-sdk = "*"
mpl-token-metadata = { version = "*", features = ["no-entrypoint"]}
arrayref = "*"
whirlpool = "*"
